--- a/AulaMvc/Application/Views/Home/Cadastrar.cshtml
+++ b/AulaMvc/Application/Views/Home/Cadastrar.cshtml
@@ -4,7 +4,14 @@
 <div class="card">
     <div class="card-header">Tarefas a fazer</div>
     <div class="card-body">
+        @using(Html.BeginForm("Cadatrar","Home", FormMethod.Post))
+        {
+            <div class="form-group">
+                <label>Nome da Tarefa</label>
+                @Html.TextBoxFor(d=>d.Tarefa, new {@class = "form-control"})
+            </div>
+            <input type="submit" class="btn btn-success btn-sm" />
+        }   
         
-        @Html.ActionLink("Cadastrar Tarefa", "Cadastrar", "Home", null, new {@class = "btn btn-success btn-sm"})
     </div>
 </div>
